Moved data to mysql, improved data pull for data reliability
Also so I dont have to deal with stupid timezones

--- a/notebooks/stonks/BLANK.ipynb
+++ b/notebooks/stonks/BLANK.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "elegant-satellite",
+   "id": "legal-effectiveness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "from datetime import datetime\n",
     "\n",
     "# my shit\n",
-    "from lib.finnhub.data import FinnhubData as finnhub\n",
+    "from lib.stores.mysql import Mysql\n",
     "from lib.oscillators import macd_over_period, stochastic_over_period\n",
     "from lib.charts import chart"
    ]
@@ -22,24 +22,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "composite-tribute",
+   "id": "rough-logic",
    "metadata": {},
    "outputs": [],
    "source": [
     "ticker = ''\n",
     "\n",
-    "fh = finnhub()\n",
-    "data = fh.get_historical_data(ticker, fh.get_daily_closings, days = 180)\n",
-    "\n",
-    "data.index = data['t']\n",
-    "data.sort_index()\n",
-    "data.drop_duplicates()"
+    "mysql = Mysql()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wrapped-australia",
+   "id": "integrated-compatibility",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mysql.update_candles(ticker, 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "animated-combat",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = mysql.get_closes_by_symbol(ticker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "protected-wisdom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-bracelet",
+   "id": "psychological-objective",
    "metadata": {},
    "outputs": [],
    "source": [
