--- a/notebooks/stonks/msft.ipynb
+++ b/notebooks/stonks/msft.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "twelve-commons",
+   "id": "legal-effectiveness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,11 +22,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spread-roman",
+   "id": "rough-logic",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ticker = 'TSLA'\n",
+    "ticker = ''\n",
     "\n",
     "mysql = Mysql()"
    ]
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confirmed-arcade",
+   "id": "integrated-compatibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "productive-reputation",
+   "id": "animated-combat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "scheduled-diversity",
+   "id": "protected-wisdom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "olive-former",
+   "id": "psychological-objective",
    "metadata": {},
    "outputs": [],
    "source": [
