Added client, talking to frontend for symbol watches

--- a/notebooks/stonks/BLANK.ipynb
+++ b/notebooks/stonks/BLANK.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "legal-effectiveness",
+   "execution_count": null,
+   "id": "instrumental-supervisor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
     "\n",
     "# my shit\n",
     "from lib.stores.mysql import Mysql\n",
-    "from lib.oscillators import macd_over_period, stochastic_over_period\n",
+    "from lib.oscillators import macd, stochastic_over_period, rsi\n",
     "from lib.charts import chart"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rough-logic",
+   "id": "tracked-synthetic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,17 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "integrated-compatibility",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mysql.update_candles(ticker, 60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "animated-combat",
+   "id": "considerable-danger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,19 +44,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protected-wisdom",
+   "id": "satellite-assistant",
    "metadata": {},
    "outputs": [],
    "source": [
     "days = 60\n",
     "\n",
-    "chart_data = list(data['c'].tail(days))\n",
+    "chart_data = data['c']\n",
+    "(macd_vals, sig_vals, histo_vals) = macd(data[['t','c']])\n",
+    "rsi_vals = rsi(data[['t', 'c']])\n",
     "\n",
-    "macd_vals = macd_over_period(list(data['c']), days)\n",
-    "\n",
-    "macd_line = list([i[0] for i in macd_vals])[-1-days:-1]\n",
-    "sig_line = list([i[1] for i in macd_vals])[-1-days:-1]\n",
-    "histo = list([i[2] for i in macd_vals])[-1-days:-1]\n",
+    "chart_line = list(chart_data.tail(days))\n",
+    "rsi_line = list(rsi_vals.tail(days))\n",
+    "macd_line = list(macd_vals.tail(days))\n",
+    "sig_line = list(sig_vals.tail(days))\n",
+    "histo = list(histo_vals.tail(days))\n",
     "\n",
     "oscillator_dicts = [\n",
     "    { 'chart': 'line', 'data': macd_line, 'label': 'macd' },\n",
@@ -75,7 +67,8 @@
     "]\n",
     "\n",
     "data_dicts = [\n",
-    "    { 'label': 'close', 'data': chart_data }\n",
+    "    { 'label': 'close', 'data': chart_line },\n",
+    "    { 'label': 'rsi', 'data': rsi_line }\n",
     "]\n",
     "\n",
     "chart(ticker, data_dicts, oscillator_dicts)"
@@ -84,26 +77,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "psychological-objective",
+   "id": "communist-treasure",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "stochastic_vals = stochastic_over_period(list(data['c']), days)\n",
-    "\n",
-    "fastk_data = list([i[0] for i in stochastic_vals])\n",
-    "slowd_data = list([i[2] for i in stochastic_vals])\n",
-    "\n",
-    "oscillator_dicts = [\n",
-    "    { 'chart': 'line', 'data': fastk_data, 'label': 'fastk'},\n",
-    "    { 'chart': 'line', 'data': slowd_data, 'label': 'slowd'}\n",
-    "]\n",
-    "\n",
-    "data_dicts = [\n",
-    "    { 'label': 'close', 'data': chart_data }\n",
-    "]\n",
-    "\n",
-    "chart(ticker, data_dicts, oscillator_dicts)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
